<resources>
    <string name="app_name">CHANG MONEY</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="appName">CHANGE MONEY</string>
    <string name="converter">ⓢ \n
        Converter</string>
    <string name="compare">% \n Compare</string>
    <string name="favorite">♡ \n Our App</string>
    <string name="thb">THB</string>
    <string name="usd">USD</string>
    <string name="cad">CAD</string>
    <string name="eur">EUR</string>
    <string name="canadian">Canadian \nDollar</string>
    <string name="thai">Thai Baht</string>
    <string name="youPaid">You paid</string>
    <string name="youRe">You received</string>
    <string name="symB">฿</string>
    <string name="symU">$</string>
    <string name="adminName">Natthanan Kongkunlaya</string>
    <string name="about">about</string>
    <string name="share">Share</string>
    <string name="share_success_text">CHANG MONEY this good application! </string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="symE">€</string>
    <string name="zero">0.0000</string>
    <string name="compare_nav">Compare</string>
    <string name="converter_nav">Converter</string>
    <string name="favorite_nav">Our App</string>
</resources>
