<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    xmlns:android="http://schemas.android.com/apk/res/android">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/compareButton"
            android:layout_width="134dp"
            android:layout_height="83dp"
            android:background="@color/colorYellow"
            android:fontFamily="@font/comicbd"
            android:text="@string/compare"
            android:textAlignment="center"
            android:textColor="@android:color/background_dark"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/favoriteButton"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/converterButton" />

        <Button
            android:id="@+id/favoriteButton"
            android:layout_width="134dp"
            android:layout_height="83dp"
            android:background="@color/colorYellow"
            android:fontFamily="@font/comicbd"
            android:text="@string/favorite"
            android:textColor="@android:color/background_light"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/compareButton" />

        <Button
            android:id="@+id/converterButton"
            android:layout_width="134dp"
            android:layout_height="83dp"
            android:background="@color/colorYellow"
            android:fontFamily="@font/comicbd"
            android:text="@string/converter"
            android:textAlignment="center"
            android:textColor="@android:color/background_light"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/compareButton"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent" />

        <ImageView
            android:id="@+id/imageChang1"
            android:layout_width="135dp"
            android:layout_height="144dp"
            android:layout_marginStart="35dp"
            android:layout_marginTop="144dp"
            app:layout_constraintEnd_toStartOf="@+id/imageChang2"
            app:layout_constraintHorizontal_bias="0.18"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/thai" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="44dp"
            android:layout_marginTop="112dp"
            android:fontFamily="@font/comicbd"
            android:text="@string/symB"
            android:textColor="@android:color/black"
            android:textSize="25sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageChang1" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="44dp"
            android:layout_marginTop="64dp"
            android:fontFamily="@font/comicbd"
            android:text="@string/youRe"
            android:textColor="@android:color/black"
            android:textSize="24sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageChang1" />

        <TextView
            android:id="@+id/shrotnessCom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="84dp"
            android:fontFamily="@font/comicbd"
            android:text="@string/usd"
            android:textColor="@android:color/black"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageChang2" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="64dp"
            android:layout_marginEnd="60dp"
            android:fontFamily="@font/comicbd"
            android:text="@string/youPaid"
            android:textColor="@android:color/black"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageChang2" />

        <TextView
            android:id="@+id/receivedText"
            android:layout_width="113dp"
            android:layout_height="38dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="112dp"
            android:fontFamily="@font/comicbd"
            android:text="@string/zero"
            android:textColor="@android:color/black"
            android:textSize="24sp"
            app:layout_constraintStart_toStartOf="@+id/textView8"
            app:layout_constraintTop_toBottomOf="@+id/imageChang1" />

        <TextView
            android:id="@+id/symRe"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="112dp"
            android:layout_marginEnd="164dp"
            android:fontFamily="@font/comicbd"
            android:text="@string/symU"
            android:textColor="@android:color/black"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageChang2" />

        <EditText
            android:id="@+id/paidEditText"
            android:layout_width="109dp"
            android:layout_height="48dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="104dp"
            android:ems="10"
            android:fontFamily="@font/comicbd"
            android:inputType="number"
            app:layout_constraintStart_toStartOf="@+id/symRe"
            app:layout_constraintTop_toBottomOf="@+id/imageChang2" />

        <ImageView
            android:id="@+id/imageChang2"
            android:layout_width="135dp"
            android:layout_height="144dp"
            android:layout_marginTop="144dp"
            android:layout_marginEnd="44dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/usa" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="84dp"
            android:layout_marginTop="24dp"
            android:fontFamily="@font/comicbd"
            android:text="@string/thb"
            android:textColor="@android:color/black"
            android:textSize="24sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageChang1" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>