<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/compareButton"
        android:layout_width="134dp"
        android:layout_height="83dp"
        android:background="@color/colorYellow"
        android:fontFamily="@font/comicbd"
        android:text="@string/compare"
        android:textAlignment="center"
        android:textColor="@android:color/background_light"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/favoriteButton"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/converterButton" />

    <Button
        android:id="@+id/favoriteButton"
        android:layout_width="134dp"
        android:layout_height="83dp"
        android:background="@color/colorYellow"
        android:fontFamily="@font/comicbd"
        android:text="@string/favorite"
        android:textColor="@android:color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/compareButton" />

    <Button
        android:id="@+id/converterButton"
        android:layout_width="134dp"
        android:layout_height="83dp"
        android:background="@color/colorYellow"
        android:fontFamily="@font/comicbd"
        android:text="@string/converter"
        android:textAlignment="center"
        android:textColor="@android:color/background_light"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/compareButton"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <WebView
        android:id="@+id/chartWeb"
        android:layout_width="403dp"
        android:layout_height="644dp"
        app:layout_constraintBottom_toBottomOf="@+id/compareButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>
</layout>